<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/addvehicle_brandLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_vehicle_brand"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/addvehicle_brandSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addvehicle_brandLabel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/addvehicle_modelLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addvehicle_brandLabel"
        android:layout_below="@+id/addvehicle_brandLabel"
        android:layout_marginTop="@dimen/add_vehicle_spacing"
        android:text="@string/add_vehicle_model"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addvehicle_modelText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addvehicle_modelLabel"
        android:layout_alignRight="@+id/addvehicle_brandSpinner"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/addvehicle_fuelTypeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addvehicle_modelLabel"
        android:layout_below="@+id/addvehicle_modelLabel"
        android:layout_marginTop="@dimen/add_vehicle_spacing"
        android:text="@string/add_vehicle_fuel_type"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/addvehicle_fuelTypeSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addvehicle_fuelTypeLabel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/addvehicle_licenseLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addvehicle_fuelTypeLabel"
        android:layout_below="@+id/addvehicle_fuelTypeLabel"
        android:layout_marginTop="@dimen/add_vehicle_spacing"
        android:text="@string/add_vehicle_license"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addvehicle_licenseText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addvehicle_licenseLabel"
        android:layout_alignRight="@+id/addvehicle_fuelTypeSpinner"
        android:ems="10"
        android:inputType="text"
        android:singleLine="true" />

    <TextView
        android:id="@+id/addvehicle_yearLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addvehicle_licenseLabel"
        android:layout_below="@+id/addvehicle_licenseLabel"
        android:layout_marginTop="@dimen/add_vehicle_spacing"
        android:text="@string/add_vehicle_year"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/addvehicle_yearSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addvehicle_yearLabel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/addvehicle_photoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/addvehicle_yearLabel"
        android:layout_below="@+id/addvehicle_yearLabel"
        android:layout_marginTop="@dimen/add_vehicle_spacing"
        android:text="@string/add_vehicle_photo"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/addvehicle_photoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/addvehicle_photoLabel"
        android:layout_alignRight="@+id/addvehicle_yearSpinner"
        android:text="@string/add_vehicle_photo_button" />

    <Button
        android:id="@+id/addvehicle_saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/add_vehicle_save_button" />

</RelativeLayout>