<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/addfueling_vehicleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/add_fueling_vehicle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/addfueling_vehicleSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/addfueling_vehicleLabel"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp" />

    <TextView
        android:id="@+id/addfueling_fuelStationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/addfueling_vehicleLabel"
        android:layout_below="@id/addfueling_vehicleLabel"
        android:layout_marginTop="@dimen/add_fueling_spacing"
        android:text="@string/add_fueling_station"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addfueling_fuelStationText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/addfueling_fuelStationLabel"
        android:layout_alignRight="@id/addfueling_vehicleSpinner"
        android:ems="10"
        android:inputType="text|textCapWords"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/addfueling_kmsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/addfueling_fuelStationLabel"
        android:layout_below="@id/addfueling_fuelStationLabel"
        android:layout_marginTop="@dimen/add_fueling_spacing"
        android:text="@string/add_vehicle_kms"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/addfueling_kmsText"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/addfueling_kmsLabel"
        android:layout_alignRight="@id/addfueling_fuelStationText"
        android:ems="10"
        android:inputType="number|text"
        android:singleLine="true" />

</RelativeLayout>